--- a/styles/game.css
+++ b/styles/game.css
@@ -3,6 +3,7 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 #flag
@@ -50,6 +51,12 @@ body
 #next
 {
     display: none;
+}
+
+#mypoint
+{
+    color: var(--secondary_color);
+    font-size: 28px;
 }
 
 @media screen and (max-width:1024px)
